--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -107,13 +107,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxp-Q0-S4M">
-                                <rect key="frame" x="10" y="262" width="370" height="21"/>
+                                <rect key="frame" x="10" y="250.33333333333337" width="370" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bxv-fq-EyF">
-                                <rect key="frame" x="10" y="293" width="370" height="120"/>
+                                <rect key="frame" x="10" y="281.33333333333331" width="370" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="RDx-BC-sMX"/>
@@ -124,53 +124,42 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
-                                <rect key="frame" x="0.0" y="423" width="390" height="120"/>
+                                <rect key="frame" x="0.0" y="411.33333333333331" width="390" height="119.99999999999994"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="Qai-Wm-JXz"/>
                                 </constraints>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pQ-Vq-bJ8">
-                                <rect key="frame" x="9.9999999999999964" y="176" width="63.666666666666657" height="22"/>
+                                <rect key="frame" x="10" y="176" width="370" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Avh-6w-xw3">
-                                <rect key="frame" x="10" y="208" width="320" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="6Mz-dM-k0b"/>
-                                </constraints>
-                            </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8IM-mh-0vY">
-                                <rect key="frame" x="324" y="212" width="56" height="36"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="編集"/>
-                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fa5-8k-6g7">
+                                <rect key="frame" x="10" y="206.33333333333334" width="370" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Slx-LU-yi1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lxp-Q0-S4M" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="3pw-es-GbR"/>
-                            <constraint firstItem="Avh-6w-xw3" firstAttribute="top" secondItem="3pQ-Vq-bJ8" secondAttribute="bottom" constant="10" id="8BI-pN-YK2"/>
                             <constraint firstItem="bxv-fq-EyF" firstAttribute="top" secondItem="Lxp-Q0-S4M" secondAttribute="bottom" constant="10" id="8Na-Ss-fnu"/>
-                            <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="Avh-6w-xw3" secondAttribute="bottom" constant="10" id="ANx-3H-6uF"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3pQ-Vq-bJ8" secondAttribute="trailing" symbolic="YES" id="Atc-ev-oEp"/>
-                            <constraint firstItem="8IM-mh-0vY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Slx-LU-yi1" secondAttribute="leading" symbolic="YES" id="Ch2-P8-6gB"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="Lxp-Q0-S4M" secondAttribute="trailing" constant="10" id="HVO-w4-jXc"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="uag-0i-wTA" secondAttribute="trailing" constant="10" id="Hf3-6w-S7i"/>
                             <constraint firstItem="cLV-1U-wey" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" id="HpF-YD-KYe"/>
-                            <constraint firstItem="Avh-6w-xw3" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="KV3-KU-hFj"/>
+                            <constraint firstItem="Fa5-8k-6g7" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Jic-UK-f51"/>
+                            <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="Fa5-8k-6g7" secondAttribute="trailing" constant="10" id="Qr7-kq-oVq"/>
                             <constraint firstItem="bxv-fq-EyF" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Sfw-F3-3cf"/>
+                            <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="3pQ-Vq-bJ8" secondAttribute="trailing" constant="10" id="UXG-cX-aam"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="top" secondItem="Slx-LU-yi1" secondAttribute="top" constant="10" id="VlN-8E-bm3"/>
-                            <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="8IM-mh-0vY" secondAttribute="trailing" constant="10" id="Vx9-Xk-dzw"/>
-                            <constraint firstItem="8IM-mh-0vY" firstAttribute="top" secondItem="uag-0i-wTA" secondAttribute="bottom" constant="46" id="Wff-6H-ElN"/>
-                            <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="8IM-mh-0vY" secondAttribute="bottom" constant="14" id="aDC-tY-XUo"/>
+                            <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="Fa5-8k-6g7" secondAttribute="bottom" constant="10" id="Ybz-7U-umj"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="bxv-fq-EyF" secondAttribute="trailing" constant="10" id="byP-yL-ges"/>
                             <constraint firstAttribute="trailing" secondItem="cLV-1U-wey" secondAttribute="trailing" id="dfI-wi-QxS"/>
                             <constraint firstItem="cLV-1U-wey" firstAttribute="top" secondItem="bxv-fq-EyF" secondAttribute="bottom" constant="10" id="do4-zC-eQp"/>
-                            <constraint firstItem="Avh-6w-xw3" firstAttribute="top" secondItem="3pQ-Vq-bJ8" secondAttribute="bottom" constant="10" id="eW0-I6-unO"/>
-                            <constraint firstItem="Avh-6w-xw3" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="jvh-qK-BL3"/>
-                            <constraint firstItem="8IM-mh-0vY" firstAttribute="centerY" secondItem="Avh-6w-xw3" secondAttribute="centerY" id="ol8-pP-7Js"/>
+                            <constraint firstItem="Fa5-8k-6g7" firstAttribute="top" secondItem="3pQ-Vq-bJ8" secondAttribute="bottom" constant="10" id="gdX-0j-mOI"/>
                             <constraint firstItem="3pQ-Vq-bJ8" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="r7F-kf-Ip7"/>
                             <constraint firstItem="3pQ-Vq-bJ8" firstAttribute="top" secondItem="uag-0i-wTA" secondAttribute="bottom" constant="10" id="rHK-Kx-bOt"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="ugi-eU-fbT"/>
@@ -187,6 +176,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoryTextField" destination="Fa5-8k-6g7" id="2Rv-UD-LhL"/>
                         <outlet property="contentsTextView" destination="bxv-fq-EyF" id="yoL-cV-aJr"/>
                         <outlet property="datePicker" destination="cLV-1U-wey" id="Rts-4x-Uxj"/>
                         <outlet property="titleTextField" destination="uag-0i-wTA" id="NsV-ic-hHO"/>
@@ -246,8 +236,16 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wnn-j7-KdK">
-                        <barButtonItem key="rightBarButtonItem" title="保存" id="CGR-e4-pDJ"/>
+                        <barButtonItem key="rightBarButtonItem" title="保存" id="CGR-e4-pDJ">
+                            <connections>
+                                <action selector="saveButton:" destination="lJ1-uq-7HS" id="dQs-vV-gil"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="categoryId" destination="im4-2Q-EUz" id="PhN-XF-2n1"/>
+                        <outlet property="categoryName" destination="vDg-Hb-P6V" id="KYq-mx-enH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kth-Fj-2RK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
